bitfields/tests/compile_error_cases/bitfield_positive_default_value_too_large_for_bits.stderr
error: The default value '4294967295' is too large to fit into the specified '8 bits'.
 --> tests/compile_error_cases/bitfield_positive_default_value_too_large_for_bits.rs:5:22
  |
5 |     #[bits(default = 0xFFFFFFFF)]
  |                      ^^^^^^^^^^
