bitfields/tests/compile_error_cases/bitfield_positive_default_value_too_large_for_bits.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    #[bits(default = 0xFFFFFFFF)]
    a: u8,
    #[bits(8)]
    b: u8,
}

fn main() {}
